# libmdx

./: -d  CMakeLists.txt  CMakePresets.json  README.md  fptr
include/: cli_opts.h  mb_clite_fptr.h  mb_clite_opts.h  mb_clite_str.h  mb_clite_wptr.h
include/mbx/: core.h  opts.h
include/stark/: core.h  opts.h
src/: cli_opts.c  core.c  mb_clite_opts.c  opts.c
tests/: CMakeLists.txt  array.c  benchmark_longhand.c  benchmark_longhand_equals.c  benchmark_mixed.c  benchmark_shorthand.c  cli.c  errors.c  fptr.c  l1.c  longhand.c  positional.c  run_tests.sh  shorthand.c  test.c  test.h
tests/opts/: CMakeLists.txt  benchmark_longhand.c  benchmark_longhand_equals.c  benchmark_mixed.c  benchmark_positional.c  benchmark_shorthand.c  benchmark_shorthand_same.c  cli.c  getopt.c  longhand.c  positional.c  run_tests.sh  shorthand.c  test.c  test.h
